[project]
name = "outleap"
description = "Tools for using asyncio to control a Second Life viewer over the LEAP protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
  {name = "Salad Dais", email = "83434023+SaladDais@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    # Whichever version. Don't care.
    "llsd"
]
dynamic=["version"]


[project.urls]
homepage = "https://github.com/SaladDais/outleap"
repository = "https://github.com/SaladDais/outleap"

[project.optional-dependencies]
tools = [
    "ptpython>=3,<4",
    "qasync",
    "pyside6-essentials",
]

[project.scripts]
outleap-agent = "outleap.scripts.agent:agent_main"
outleap-repl = "outleap.scripts.repl:repl_main"
outleap-inspector = "outleap.scripts.inspector:inspector_main"


[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
outleap = [
    "scripts/ui/inspector.ui"
]

[tool.setuptools_scm]
write_to = "src/outleap/version.py"
write_to_template = """
# This file is auto-generated by setuptools-scm do NOT edit it.

from collections import namedtuple

#: A namedtuple of the version info for the current release.
_version_info = namedtuple("_version_info", "major minor micro status")

parts = "{version}".split(".", 3)
version_info = _version_info(
    int(parts[0]),
    int(parts[1]),
    int(parts[2]),
    parts[3] if len(parts) == 4 else "",
)

# Remove everything but the 'version_info' from this module.
del namedtuple, _version_info, parts

__version__ = "{version}"
"""

[tool.black]
line-length = 110

[tool.pytest.ini_options]
minversion = "6.0"

[tool.isort]
profile = "black"
